# onnxruntime-inference-examples

./: .clang-format  .gitignore  .swift-format  README.md  requirements.txt
.config/: tsaoptions.json
.gdn/: .gdntsa
.github/workflows/: codeql.yml  gradle-wrapper-validation.yml  lint.yml  linux-ci.yml  mobile.yml  nodejs.yml  win-ci.yml  windows.yml
.pipelines/: OneBranch.Official.yml  OneBranch.PullRequest.yml
c_cxx/: CMakeLists.txt  README.md
c_cxx/MNIST/: CMakeLists.txt  MNIST.cpp  readme.md
c_cxx/OpWrapper_EP/OpenVINO/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
c_cxx/OpWrapper_EP/OpenVINO/custom_op/: CMakeLists.txt  custom_op.cpp  custom_op.def  custom_op.h  openvino_wrapper.cpp  openvino_wrapper.h
c_cxx/OpenVINO_EP/Linux/squeezenet_classification/: README.md  squeezenet_cpp_app.cpp  squeezenet_cpp_app_io.cpp
c_cxx/OpenVINO_EP/Windows/: CMakeLists.txt  README.md
c_cxx/OpenVINO_EP/Windows/model-explorer/: CMakeLists.txt  model-explorer.cpp
c_cxx/OpenVINO_EP/Windows/squeezenet_classification/: CMakeLists.txt  squeezenet_cpp_app.cpp
c_cxx/OpenVINO_EP/Windows/squeezenet_classification_io_buffer/: CMakeLists.txt  squeezenet_cpp_app_io_buffer.cpp  synset.txt
c_cxx/OpenVINO_EP/squeezenet_classification/: README.md
c_cxx/QNN_EP/: README.md  main.cpp  run_qnn_ep_sample.bat
c_cxx/QNN_EP/QnnCpu/: CMakeLists.txt  README.md  main.cpp  run_qnn_ep_sample.bat
c_cxx/QNN_EP/mobilenetv2_classification/: CMakeLists.txt  README.md  add_trans_cast.py  main.cpp  mobilenetv2-12.cpp  mobilenetv2-12_net.json  mobilenetv2_helper.py  run_qnn_ep_sample.bat  to_fp16.py
c_cxx/Snpe_EP/: CMakeLists.txt  README.md  main.cpp
c_cxx/Windows/: CMakeLists.txt  README.md
c_cxx/Windows/OpenVINO_EP/squeezenet_classification/: CMakeLists.txt  squeezenet_cpp_app.cpp
c_cxx/Windows/model-explorer/: CMakeLists.txt  model-explorer.cpp
c_cxx/accuracy_tool/: CMakeLists.txt  README.md  build.bat  cmd_args.cc  main.cc
c_cxx/accuracy_tool/src/: acc_task.cc  acc_task.h  accuracy_tester.cc  accuracy_tester.h  basic_utils.cc  basic_utils.h  cmd_args.cc  cmd_args.h  data_loader.cc  data_loader.h  main.cc  model_io_utils.cc  model_io_utils.h  task_thread_pool.cc  task_thread_pool.h
c_cxx/accuracy_tool/src/ep_cmd_args/: plugin_cmd_args.cc  plugin_cmd_args.h  qnn_cmd_args.cc  qnn_cmd_args.h
c_cxx/customop/: CMakeLists.txt  README.md  example.cc  kernelone.py
c_cxx/fns_candy_style_transfer/: CMakeLists.txt  README.md  fns_candy_style_transfer.c  image_file.h  image_file_libpng.c  image_file_wic.cc
c_cxx/imagenet/: CMakeLists.txt  README.md  async_ring_buffer.h  controller.cc  image_loader.cc  image_loader.h  image_loader_libjpeg.cc  image_loader_wic.cc  local_filesystem.h  local_filesystem_win.cc  main.cc  runnable_task.h  string_utils.h  sync_api.h  sync_api_win.cc
c_cxx/include/: providers.h
c_cxx/model-explorer/: CMakeLists.txt  batch-model-explorer.cpp  model-explorer.cpp
c_cxx/ort_tutorial/: README.md
c_cxx/ort_tutorial/cmake/: onnxruntimesetup.cmake
c_cxx/plugin_EP/: CMakeLists.txt  README.md  app.cc  plugin_ep_inference.cc
c_cxx/squeezenet/: CMakeLists.txt  README.md  main.cpp  run_capi_application.bat  run_capi_application.sh
c_sharp/: README.md
c_sharp/image_classification/: Program.cs  README.md  image_classification.csproj
ci_build/: download_ort_release.ps1  download_ort_release_and_install_deps.sh  policheck_exclusions.xml
ci_build/azure_pipelines/: compliance.yml  mobile-examples-pipeline.yml
ci_build/python/: run_android_emulator.py
js/: .gitignore  README.md
js/api-usage-tensor-image/: README.md  index.html
js/api-usage_inference-session/: README.md  inference-session-create.js  inference-session-properties.js  inference-session-run.js  package.json
js/api-usage_ort-env-flags/: README.md
js/api-usage_session-options/: README.md
js/api-usage_tensor/: README.md  package.json  tensor-create.js  tensor-properties.js
js/app-objectdetection-example/: App.tsx  BitmapModule.java  BitmapReactPackage.java  README.md  app.json  metro.config.js  package.json  tsconfig.json
js/app-super-resolution/: .gitignore  BitmapModule.java  BitmapReactPackage.java  README.md  app.json  index.js  instructions.md  metro.config.js  package.json  webpack.config.js
js/chat/: README.md  index.html  llm.js  main.css  main.js  package.json  vite.config.js  webpack.config.js
js/importing_onnxruntime-node/: README.md
js/importing_onnxruntime-react-native/: README.md
js/importing_onnxruntime-web/: README.md
js/ort-whisper/: README.md  index.html  main.js  package.json  webpack.config.js
js/quick-start_onnxruntime-node/: README.md  index.js  package.json
js/quick-start_onnxruntime-node-bundler/: README.md  main.js  package.json  webpack.config.js
js/quick-start_onnxruntime-web-bundler/: README.md  index.html  main.js  package.json  webpack.config.js
js/quick-start_onnxruntime-web-script-tag/: README.md  index.html  index_esm.html
mobile/: README.md
plugin_execution_providers/tensorrt/: CMakeLists.txt  cuda_allocator.cc  cuda_allocator.h  ep_utils.h  onnx_ctx_model_helper.cc  onnx_ctx_model_helper.h  tensorrt_execution_provider.cc  tensorrt_execution_provider.def  tensorrt_execution_provider.h  tensorrt_execution_provider_data_transfer.cc  tensorrt_execution_provider_data_transfer.h  tensorrt_execution_provider_info.cc  tensorrt_execution_provider_info.h  tensorrt_execution_provider_stream_support.cc  tensorrt_execution_provider_stream_support.h  tensorrt_execution_provider_utils.h  tensorrt_provider_factory.cc  tensorrt_provider_factory.h
plugin_execution_providers/tensorrt/cuda/: unary_elementwise_ops_impl.cu  unary_elementwise_ops_impl.h
plugin_execution_providers/tensorrt/cuda/cu_inc/: unary_elementwise_impl.cuh
plugin_execution_providers/tensorrt/utils/: common.h  ep_utils.h  exceptions.h  helper.cc  make_string.h  ort_graph_to_proto.h  parse_string.h  path_string.h  provider_options.h  provider_options_utils.h
plugin_execution_providers/tensorrt/utils/cuda/: cuda_call.h  cuda_common.h
python/: README.md
swift/: ReadMe.md
(+758 files in other folders)
